# resume

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  askama.toml
.github/workflows/: auto-merge.yml  main.yml
benches/: color.rs
browser-extension/: Cargo.toml  README.md  background.js  content-script.js  manifest.json  native-manifest.json  package-lock.json  webpack.config.js
browser-extension/icons/: LICENSE
browser-extension/sidebar/: index.js  panel.html  panel.js
browser-extension/src/: lib.rs
examples/: example-form.html  resume.yaml
resume-extension/: README.md  content-script.js  manifest.json
resume-extension/sidebar/: panel.js
src/: cli.yml  lib.rs  main.rs
src/integrations/: browser_extension.rs  executable.rs  execute.rs  mod.rs  sn.rs  tex.rs
src/models/: color.rs  contribution.rs  education.rs  employment.rs  experience.rs  layout_config.rs  mod.rs  native_manifest.rs  person.rs  reduced_resume.rs  resume.rs  skill.rs
src/operations/: build_extension.rs  mod.rs  render_template.rs  write_manifest.rs  write_to_file.rs
src/serializers/: color_serializer.rs  date_serializer.rs  mod.rs
templates/: base.html  base.tex  contribution.tex  education.html  education.tex  employment.html  employment.tex  experience.tex  person.tex  resume.tex  settings.html  skills.tex
tests/: browser_extension_integration_test.rs  sn_integration_test.rs  tex_integration_test.rs
tests/fixtures/: expected.html  expected.tex
