[package]
name = "resume"
version = "0.1.0"
authors = ["Dunja Lalic"]
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0.68"
askama = "0.11.1"
byteorder = "1.4.3"
chrono = { version = "0.4.23", features = ["serde"] }
clap = { version = "3.2.23", features = ["derive"] }
dirs = "4.0.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_yaml = "0.9.16"

[dev-dependencies]
proptest = "1.0.0"

[[bench]]
name = "color"
harness = false
