[package]
name = "resume"
version = "0.1.0"
authors = ["Dunja Lalic"]
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0.71"
askama = "0.12.0"
byteorder = "1.4.3"
chrono = { version = "0.4.24", features = ["serde"] }
clap = { version = "3.2.23", features = ["derive"] }
dirs = "5.0.0"
serde = { version = "1.0.160", features = ["derive"] }
serde_yaml = "0.9.21"

[dev-dependencies]
proptest = "1.1.0"

[[bench]]
name = "color"
harness = false
