[package]
name = "resume"
version = "0.1.0"
authors = ["Dunja Lalic"]
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0.89"
askama = "0.12.1"
byteorder = "1.5.0"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.20", features = ["derive"] }
dirs = "5.0.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_yaml = "0.9.34"

[dev-dependencies]
proptest = "1.5.0"

[[bench]]
name = "color"
harness = false
